# solid_recover_new

./: .gitignore  MUS.out  README.md  brain.out  brain_dev.out  case.out  debug.ipynb  debug_1.ipynb  pyproject.toml  task_1.md  task_2.md  task_2_任务修改.md  zws.out
configs/: case11_pbmc_wc_scratch.yaml  case11_pbmc_wo_weight.yaml  case8_bmmc_wc_scratch.yaml  case8_bmmc_wo_weight.yaml  case9_skin_wc_scratch.yaml  case9_skin_wo_weight.yaml  case_brain_dev.yaml  case_brain_dev_sub.yaml  case_brain_dev_sub_cvae.yaml  case_brain_dev_sub_grl.yaml  case_mus_kidney.yaml  case_renal_cortex.yaml  case_zws.yaml  pair_pretrain_case8.yaml  pair_scratch_case8.yaml  single_pretrain_rna.yaml
context/: skills.md  当前工作进展.md  项目修改文档.md  项目理解文档.md
ref_report/: claude_summary.md  ds_summary.md  gemini.md  gpt_summary.md
reports/round_0_baseline/: metrics.json  report.md
reports/round_1_CVAE_batch_embed_dim_8/: metrics.json  report.md
reports/round_2_GRL_adversarial_weight_0.01/: metrics.json  report.md
reports/round_3_CVAE_large/: config.yaml
reports/test_report/: metrics.json  report.md
scripts/: batch_train_all.sh  batch_train_sequential.sh  eval.sh  eval_bmmc_wc.sh  eval_case11.sh  extract_embeddings_umap.py  inference_umap_cvae_large.py  prepare_brain_dev_subset.py  run_baseline.py  run_iteration.py  run_train.sh  send_report.py  train.sh  train_zws.sh
solid_recover/: __init__.py  _logging.py
solid_recover/analysis/: __init__.py  decomposition.py  grn_builder.py
solid_recover/cli/: __init__.py  main.py
solid_recover/config/: __init__.py  loader.py  schema.py
solid_recover/data/: __init__.py  adata_utils.py  datasets.py  prepare.py
solid_recover/evaluation/: __init__.py  batch_metrics.py  embeddings.py  metrics.py  (+3 more)
(+19 files in other folders)
